Changes CORS IPS open

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,34 +4,121 @@ upstream artesa_app {
     keepalive 32;
 }
 
-# Redirigir HTTP a HTTPS (si usas SSL)
+# ========================================
+# SERVIDOR HTTP (Puerto 80)
+# ========================================
 server {
     listen 80;
     server_name ec2-44-216-131-63.compute-1.amazonaws.com _;
     
-    # Health check para ALB
-    location /health {
+    # Variables para logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    # ========================================
+    # HEADERS CORS GLOBALES - PERMISIVOS
+    # ========================================
+    add_header Access-Control-Allow-Origin "*" always;
+    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+    add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+    add_header Access-Control-Allow-Credentials "false" always;
+    add_header Access-Control-Max-Age 86400 always;
+
+    # ========================================
+    # HEALTH CHECK - SIN CORS HEADERS
+    # ========================================
+    location = /health {
         proxy_pass http://artesa_app/api/health;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        access_log off;
     }
 
-    # Manejar peticiones OPTIONS específicamente para CORS preflight
-    location / {
-        # Headers CORS para todas las solicitudes
-        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-        add_header Access-Control-Allow-Credentials "true" always;
+    location = /api/health {
+        proxy_pass http://artesa_app/api/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        access_log off;
+    }
 
+    # ========================================
+    # RUTAS API - CON MANEJO OPTIONS
+    # ========================================
+    location /api/ {
         # Manejar peticiones OPTIONS (CORS preflight)
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
             add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-            add_header Access-Control-Max-Age 86400;
-            add_header Content-Type "text/plain charset=UTF-8";
-            add_header Content-Length 0;
+            add_header Access-Control-Allow-Credentials "false" always;
+            add_header Access-Control-Max-Age 86400 always;
+            add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
+            return 204;
+        }
+
+        # Proxy a la aplicación
+        proxy_pass http://artesa_app;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        client_max_body_size 50M;
+    }
+
+    # ========================================
+    # DOCUMENTACIÓN SWAGGER
+    # ========================================
+    location /api-docs/ {
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /swagger.json {
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # ========================================
+    # ARCHIVOS ESTÁTICOS
+    # ========================================
+    location /uploads/ {
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # ========================================
+    # FALLBACK PARA TODAS LAS DEMÁS RUTAS
+    # ========================================
+    location / {
+        # Manejar peticiones OPTIONS para rutas generales
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+            add_header Access-Control-Allow-Credentials "false" always;
+            add_header Access-Control-Max-Age 86400 always;
+            add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
             return 204;
         }
 
@@ -52,49 +139,89 @@ server {
     }
 }
 
-# Configuración HTTPS (para producción)
+# ========================================
+# SERVIDOR HTTPS (Puerto 443)
+# ========================================
 server {
     listen 443 ssl http2;
-    server_name _;
+    server_name ec2-44-216-131-63.compute-1.amazonaws.com _;
 
-    # Certificados SSL (configurar en producción)
+    # ========================================
+    # CONFIGURACIÓN SSL
+    # ========================================
     ssl_certificate /etc/nginx/ssl/cert.pem;
     ssl_certificate_key /etc/nginx/ssl/key.pem;
+    
+    # Configuración SSL mejorada
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
-    # Headers de seguridad
+    # ========================================
+    # HEADERS DE SEGURIDAD
+    # ========================================
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    # Headers CORS específicos para CloudFront
-    add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
-    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-    add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken" always;     
-    add_header Access-Control-Allow-Credentials "true" always;
-
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    
     # Ocultar versión de nginx
     server_tokens off;
 
-    # Headers CORS para CloudFront
-    add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+    # ========================================
+    # HEADERS CORS GLOBALES - PERMISIVOS
+    # ========================================
+    add_header Access-Control-Allow-Origin "*" always;
     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-    add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken" always;     
-    add_header Access-Control-Allow-Credentials "true" always;
+    add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+    add_header Access-Control-Allow-Credentials "false" always;
+    add_header Access-Control-Max-Age 86400 always;
 
-    # API routes
-    # Manejar peticiones OPTIONS (CORS preflight)
+    # Variables para logging
+    access_log /var/log/nginx/ssl_access.log;
+    error_log /var/log/nginx/ssl_error.log;
+
+    # ========================================
+    # HEALTH CHECK - SIN CORS HEADERS
+    # ========================================
+    location = /health {
+        proxy_pass http://artesa_app/api/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        access_log off;
+    }
+
+    location = /api/health {
+        proxy_pass http://artesa_app/api/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        access_log off;
+    }
+
+    # ========================================
+    # RUTAS API - CON MANEJO OPTIONS
+    # ========================================
     location /api/ {
+        # Manejar peticiones OPTIONS (CORS preflight)
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Origin "*" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken" always;
-            add_header Access-Control-Allow-Credentials "true" always; 
-            add_header Access-Control-Max-Age 86400;
-            add_header Content-Type "text/plain charset=UTF-8";        
-            add_header Content-Length 0;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+            add_header Access-Control-Allow-Credentials "false" always;
+            add_header Access-Control-Max-Age 86400 always;
+            add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
             return 204;
         }
 
+        # Proxy a la aplicación
         proxy_pass http://artesa_app;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -110,22 +237,28 @@ server {
         client_max_body_size 50M;
     }
 
-    # Documentación API
+    # ========================================
+    # DOCUMENTACIÓN SWAGGER
+    # ========================================
     location /api-docs/ {
         proxy_pass http://artesa_app;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;   
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Swagger JSON
     location /swagger.json {
         proxy_pass http://artesa_app;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Archivos estáticos (uploads)
+    # ========================================
+    # ARCHIVOS ESTÁTICOS
+    # ========================================
     location /uploads/ {
         proxy_pass http://artesa_app;
         proxy_set_header Host $host;
@@ -133,15 +266,23 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # Health check
-    location /health {
-        proxy_pass http://artesa_app/api/health;
-        proxy_set_header Host $host;
-        access_log off;
-    }
-
-    # Fallback para otras rutas
+    # ========================================
+    # FALLBACK PARA TODAS LAS DEMÁS RUTAS
+    # ========================================
     location / {
+        # Manejar peticiones OPTIONS para rutas generales
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+            add_header Access-Control-Allow-Credentials "false" always;
+            add_header Access-Control-Max-Age 86400 always;
+            add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
+            return 204;
+        }
+
+        # Proxy a la aplicación
         proxy_pass http://artesa_app;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -151,5 +292,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;   
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        client_max_body_size 50M;
     }
 }
