--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -4,31 +4,21 @@ upstream artesa_app {
     keepalive 32;
 }
 
-# Mapa para CORS dinámico - Orígenes permitidos
+# Mapa para CORS dinámico - Orígenes permitidos (más permisivo)
 map $http_origin $cors_origin {
-    default "";
-    "~^https://d1bqegutwmfn98\.cloudfront\.net$" $http_origin;
-    "~^https://ec2-44-216-131-63\.compute-1\.amazonaws\.com$" $http_origin;
-    "~^http://ec2-44-216-131-63\.compute-1\.amazonaws\.com$" $http_origin;
-    "~^https?://localhost:[0-9]+$" $http_origin;
+    default "*";
 }
 
-# Mapa para credenciales CORS
 map $cors_origin $cors_cred {
-    default "";
-    "~." "true";
+    default "false";
 }
 
-# Mapa para headers permitidos
 map $cors_origin $cors_headers {
-    default "";
-    "~." "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform";
+    default "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform";
 }
 
-# Mapa para métodos permitidos
 map $cors_origin $cors_methods {
-    default "";
-    "~." "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD";
+    default "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD";
 }
 
 # ========================================
