Change CORS errors

--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -6,11 +6,13 @@ upstream artesa_app {
 
 # Mapa para CORS dinámico - Orígenes permitidos (más permisivo)
 map $http_origin $cors_origin {
-    default "*";
+    "~^https://d1bqegutwmfn98\.cloudfront\.net$" "https://d1bqegutwmfn98.cloudfront.net";
+    default "https://d1bqegutwmfn98.cloudfront.net";
 }
 
 map $cors_origin $cors_cred {
-    default "false";
+    "~^https://d1bqegutwmfn98\.cloudfront\.net$" "true";
+    default "true";
 }
 
 map $cors_origin $cors_headers {
