--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -6,12 +6,14 @@ upstream artesa_app {
 
 # Mapa para CORS dinámico - Orígenes permitidos (más permisivo)
 map $http_origin $cors_origin {
-    "~^https://d1bqegutwmfn98\.cloudfront\.net$" "https://d1bqegutwmfn98.cloudfront.net";
     default "https://d1bqegutwmfn98.cloudfront.net";
+    "~^https://d1bqegutwmfn98\.cloudfront\.net$" "https://d1bqegutwmfn98.cloudfront.net";
+    "~^http://localhost.*" "http://localhost:3000";
+    "~^https://localhost.*" "https://localhost:3000";
 }
 
 map $cors_origin $cors_cred {
-    "~^https://d1bqegutwmfn98\.cloudfront\.net$" "true";
+    "https://d1bqegutwmfn98.cloudfront.net" "true";
     default "true";
 }
 
@@ -47,10 +49,11 @@ server {
     # Health check adicional para la aplicación
     location = /api/health {
         # Headers CORS
-        add_header Access-Control-Allow-Origin $cors_origin always;
-        add_header Access-Control-Allow-Credentials $cors_cred always;
-        add_header Access-Control-Allow-Headers $cors_headers always;
-        add_header Access-Control-Allow-Methods $cors_methods always;
+        # Headers CORS para todas las respuestas
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
         proxy_pass http://artesa_app;
         proxy_set_header Host $host;
@@ -62,17 +65,19 @@ server {
     # Rutas de API con CORS completo
     location /api/ {
         # Headers CORS para todas las respuestas
-        add_header Access-Control-Allow-Origin $cors_origin always;
-        add_header Access-Control-Allow-Credentials $cors_cred always;
-        add_header Access-Control-Allow-Headers $cors_headers always;
-        add_header Access-Control-Allow-Methods $cors_methods always;
+        # Headers CORS para todas las respuestas
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
         # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin $cors_origin always;
-            add_header Access-Control-Allow-Credentials $cors_cred always;
-            add_header Access-Control-Allow-Headers $cors_headers always;
-            add_header Access-Control-Allow-Methods $cors_methods always;
+            # Headers CORS para todas las respuestas
+            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
             add_header Access-Control-Max-Age 86400 always;
             add_header Content-Type "text/plain charset=UTF-8" always;
             add_header Content-Length 0 always;
@@ -95,10 +100,11 @@ server {
     # Documentación Swagger
     location /api-docs/ {
         # Headers CORS
-        add_header Access-Control-Allow-Origin $cors_origin always;
-        add_header Access-Control-Allow-Credentials $cors_cred always;
-        add_header Access-Control-Allow-Headers $cors_headers always;
-        add_header Access-Control-Allow-Methods $cors_methods always;
+        # Headers CORS para todas las respuestas
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
         proxy_pass http://artesa_app;
         proxy_set_header Host $host;
@@ -110,10 +116,11 @@ server {
     # Swagger JSON
     location /swagger.json {
         # Headers CORS
-        add_header Access-Control-Allow-Origin $cors_origin always;
-        add_header Access-Control-Allow-Credentials $cors_cred always;
-        add_header Access-Control-Allow-Headers $cors_headers always;
-        add_header Access-Control-Allow-Methods $cors_methods always;
+        # Headers CORS para todas las respuestas
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
         proxy_pass http://artesa_app;
         proxy_set_header Host $host;
@@ -137,17 +144,19 @@ server {
     # Todas las demás rutas
     location / {
         # Headers CORS
-        add_header Access-Control-Allow-Origin $cors_origin always;
-        add_header Access-Control-Allow-Credentials $cors_cred always;
-        add_header Access-Control-Allow-Headers $cors_headers always;
-        add_header Access-Control-Allow-Methods $cors_methods always;
+        # Headers CORS para todas las respuestas
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
         # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin $cors_origin always;
-            add_header Access-Control-Allow-Credentials $cors_cred always;
-            add_header Access-Control-Allow-Headers $cors_headers always;
-            add_header Access-Control-Allow-Methods $cors_methods always;
+            # Headers CORS para todas las respuestas
+            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
             add_header Access-Control-Max-Age 86400 always;
             add_header Content-Type "text/plain charset=UTF-8" always;
             add_header Content-Length 0 always;
