--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -16,16 +16,17 @@ server {
     error_log /var/log/nginx/error.log;
 
     # ========================================
-    # HEADERS CORS GLOBALES - PERMISIVOS
+    # CORS HEADERS GLOBALES - MUY PERMISIVOS
     # ========================================
-    add_header Access-Control-Allow-Origin "*" always;
-    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-    add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-    add_header Access-Control-Allow-Credentials "false" always;
-    add_header Access-Control-Max-Age 86400 always;
+    # Aplicar a todas las respuestas
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD' always;
+    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,g-recaptcha-response,recaptchatoken,bypass-tunnel-reminder,ngrok-skip-browser-warning,sec-ch-ua,sec-ch-ua-mobile,sec-ch-ua-platform' always;
+    add_header 'Access-Control-Allow-Credentials' 'false' always;
+    add_header 'Access-Control-Max-Age' '86400' always;
 
     # ========================================
-    # HEALTH CHECK - SIN CORS HEADERS
+    # HEALTH CHECK
     # ========================================
     location = /health {
         proxy_pass http://artesa_app/api/health;
@@ -46,21 +47,31 @@ server {
     }
 
     # ========================================
-    # RUTAS API - CON MANEJO OPTIONS
+    # MANEJO ESPECIAL PARA OPTIONS (PREFLIGHT)
+    # ========================================
+    location @options {
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,g-recaptcha-response,recaptchatoken,bypass-tunnel-reminder,ngrok-skip-browser-warning,sec-ch-ua,sec-ch-ua-mobile,sec-ch-ua-platform' always;
+        add_header 'Access-Control-Allow-Credentials' 'false' always;
+        add_header 'Access-Control-Max-Age' '86400' always;
+        add_header 'Content-Type' 'text/plain; charset=utf-8' always;
+        add_header 'Content-Length' '0' always;
+        return 204;
+    }
+
+    # ========================================
+    # RUTAS API
     # ========================================
     location /api/ {
-        # Manejar peticiones OPTIONS (CORS preflight)
+        # Manejar preflight requests
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Credentials "false" always;
-            add_header Access-Control-Max-Age 86400 always;
-            add_header Content-Type "text/plain charset=UTF-8" always;
-            add_header Content-Length 0 always;
-            return 204;
+            try_files $uri @options;
         }
 
+        # Log detallado para debugging
+        access_log /var/log/nginx/api_access.log;
+        
         # Proxy a la aplicación
         proxy_pass http://artesa_app;
         proxy_http_version 1.1;
@@ -110,16 +121,9 @@ server {
     # FALLBACK PARA TODAS LAS DEMÁS RUTAS
     # ========================================
     location / {
-        # Manejar peticiones OPTIONS para rutas generales
+        # Manejar preflight requests
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Credentials "false" always;
-            add_header Access-Control-Max-Age 86400 always;
-            add_header Content-Type "text/plain charset=UTF-8" always;
-            add_header Content-Length 0 always;
-            return 204;
+            try_files $uri @options;
         }
 
         # Proxy a la aplicación Node.js
@@ -159,6 +163,20 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
+    # Variables para logging
+    access_log /var/log/nginx/ssl_access.log;
+    error_log /var/log/nginx/ssl_error.log;
+
+    # ========================================
+    # CORS HEADERS GLOBALES - MUY PERMISIVOS
+    # ========================================
+    # Aplicar a todas las respuestas
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD' always;
+    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,g-recaptcha-response,recaptchatoken,bypass-tunnel-reminder,ngrok-skip-browser-warning,sec-ch-ua,sec-ch-ua-mobile,sec-ch-ua-platform' always;
+    add_header 'Access-Control-Allow-Credentials' 'false' always;
+    add_header 'Access-Control-Max-Age' '86400' always;
+
     # ========================================
     # HEADERS DE SEGURIDAD
     # ========================================
@@ -172,20 +190,7 @@ server {
     server_tokens off;
 
     # ========================================
-    # HEADERS CORS GLOBALES - PERMISIVOS
-    # ========================================
-    add_header Access-Control-Allow-Origin "*" always;
-    add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-    add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-    add_header Access-Control-Allow-Credentials "false" always;
-    add_header Access-Control-Max-Age 86400 always;
-
-    # Variables para logging
-    access_log /var/log/nginx/ssl_access.log;
-    error_log /var/log/nginx/ssl_error.log;
-
-    # ========================================
-    # HEALTH CHECK - SIN CORS HEADERS
+    # HEALTH CHECK
     # ========================================
     location = /health {
         proxy_pass http://artesa_app/api/health;
@@ -206,21 +211,31 @@ server {
     }
 
     # ========================================
-    # RUTAS API - CON MANEJO OPTIONS
+    # MANEJO ESPECIAL PARA OPTIONS (PREFLIGHT)
+    # ========================================
+    location @options {
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,g-recaptcha-response,recaptchatoken,bypass-tunnel-reminder,ngrok-skip-browser-warning,sec-ch-ua,sec-ch-ua-mobile,sec-ch-ua-platform' always;
+        add_header 'Access-Control-Allow-Credentials' 'false' always;
+        add_header 'Access-Control-Max-Age' '86400' always;
+        add_header 'Content-Type' 'text/plain; charset=utf-8' always;
+        add_header 'Content-Length' '0' always;
+        return 204;
+    }
+
+    # ========================================
+    # RUTAS API
     # ========================================
     location /api/ {
-        # Manejar peticiones OPTIONS (CORS preflight)
+        # Manejar preflight requests
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Credentials "false" always;
-            add_header Access-Control-Max-Age 86400 always;
-            add_header Content-Type "text/plain charset=UTF-8" always;
-            add_header Content-Length 0 always;
-            return 204;
+            try_files $uri @options;
         }
 
+        # Log detallado para debugging
+        access_log /var/log/nginx/ssl_api_access.log;
+        
         # Proxy a la aplicación
         proxy_pass http://artesa_app;
         proxy_http_version 1.1;
@@ -270,16 +285,9 @@ server {
     # FALLBACK PARA TODAS LAS DEMÁS RUTAS
     # ========================================
     location / {
-        # Manejar peticiones OPTIONS para rutas generales
+        # Manejar preflight requests
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "*" always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Credentials "false" always;
-            add_header Access-Control-Max-Age 86400 always;
-            add_header Content-Type "text/plain charset=UTF-8" always;
-            add_header Content-Length 0 always;
-            return 204;
+            try_files $uri @options;
         }
 
         # Proxy a la aplicación
