--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -36,14 +36,19 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    # Health check para ALB - sin CORS necesario
+    # Health check para ALB - con CORS para navegadores
     location = /health {
+        # Headers CORS para todas las respuestas
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+
         proxy_pass http://artesa_app/api/health;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        access_log off;
     }
 
     # Health check adicional para la aplicación
@@ -208,14 +213,19 @@ server {
     access_log /var/log/nginx/ssl_access.log;
     error_log /var/log/nginx/ssl_error.log;
 
-    # Health check para ALB - sin CORS necesario
+    # Health check para ALB - con CORS para navegadores
     location = /health {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
+
         proxy_pass http://artesa_app/api/health;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        access_log off;
     }
 
     # Health check adicional para la aplicación
