--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -114,26 +114,40 @@ server {
         client_max_body_size 50M;
     }
 
-    # Documentación Swagger
-    location /api-docs/ {
-        # Headers CORS
+    # Documentación Swagger con CORS completo
+    location /api-docs {
         # Headers CORS para todas las respuestas
         add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
         add_header Access-Control-Allow-Credentials "true" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
+        # Manejar preflight OPTIONS
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+            add_header Access-Control-Max-Age 86400 always;
+            add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
+            return 204;
+        }
+
         proxy_pass http://artesa_app;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 
-    # Swagger JSON
+    # Swagger JSON específico
     location /swagger.json {
         # Headers CORS
-        # Headers CORS para todas las respuestas
         add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
         add_header Access-Control-Allow-Credentials "true" always;
         add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
@@ -303,28 +317,44 @@ server {
         client_max_body_size 50M;
     }
 
-    # Documentación Swagger
-    location /api-docs/ {
-        # Headers CORS
-        add_header Access-Control-Allow-Origin $cors_origin always;
-        add_header Access-Control-Allow-Credentials $cors_cred always;
-        add_header Access-Control-Allow-Headers $cors_headers always;
-        add_header Access-Control-Allow-Methods $cors_methods always;
+    # Documentación Swagger con CORS completo
+    location /api-docs {
+        # Headers CORS para todas las respuestas
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+
+        # Manejar preflight OPTIONS
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
+            add_header Access-Control-Max-Age 86400 always;
+            add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
+            return 204;
+        }
 
         proxy_pass http://artesa_app;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 
-    # Swagger JSON
+    # Swagger JSON específico
     location /swagger.json {
         # Headers CORS
-        add_header Access-Control-Allow-Origin $cors_origin always;
-        add_header Access-Control-Allow-Credentials $cors_cred always;
-        add_header Access-Control-Allow-Headers $cors_headers always;
-        add_header Access-Control-Allow-Methods $cors_methods always;
+        add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
+        add_header Access-Control-Allow-Credentials "true" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
 
         proxy_pass http://artesa_app;
         proxy_set_header Host $host;
