--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -114,8 +114,8 @@ server {
         client_max_body_size 50M;
     }
 
-    # Documentación Swagger con CORS completo
-    location /api-docs {
+    # Documentación Swagger (con y sin slash final)
+    location ~ ^/api-docs/?$ {
         # Headers CORS para todas las respuestas
         add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
         add_header Access-Control-Allow-Credentials "true" always;
@@ -318,7 +318,7 @@ server {
     }
 
     # Documentación Swagger con CORS completo
-    location /api-docs {
+    location ~ ^/api-docs/?$ {
         # Headers CORS para todas las respuestas
         add_header Access-Control-Allow-Origin "https://d1bqegutwmfn98.cloudfront.net" always;
         add_header Access-Control-Allow-Credentials "true" always;
